--- a/build
+++ b/build
@@ -9,9 +9,10 @@ add_embedded () {
 }
 add_embedded src/pug.png
 # add_embedded src/pug.png
-x86_64-w64-mingw32-g++ -o main.exe src/main.cpp \
+x86_64-w64-mingw32-g++ -o main.exe src/main.cpp glad/src/glad.c \
 -static-libstdc++ \
 -I./glfw/include \
+-I./glad/include \
 -L./glfw/lib-mingw-w64 \
 -lglfw3 -lopengl32 -lgdi32 
 
