--- a/build
+++ b/build
@@ -8,6 +8,8 @@ add_embedded () {
 
 }
 add_embedded src/pug.rgb
+add_embedded src/shaders/fragment.glsl
+add_embedded src/shaders/vertex.glsl
 # add_embedded src/pug.png
 x86_64-w64-mingw32-g++ -o main.exe src/main.cpp glad/src/glad.c \
 -static-libstdc++ \
