--- a/build
+++ b/build
@@ -13,14 +13,21 @@ add_embedded src/shaders/vertex.glsl
 # add_embedded src/pug.png
 
 # * Icon generator:x86_64-w64-mingw32-windres
+
 x86_64-w64-mingw32-g++ -o main.exe src/main.cpp libs/glad/src/glad.c icon.o \
 -static-libstdc++ \
--I./libs/glfw/include \
--I./libs/glad/include \
--I./libs/glm \
--I./libs/stb \
+-I. \
 -L./libs/glfw/lib-mingw-w64 \
--lglfw3 -lopengl32 -lgdi32\
+-lglfw3 -lopengl32 -lgdi32
+# odld
+# x86_64-w64-mingw32-g++ -o main.exe src/main.cpp libs/glad/src/glad.c icon.o \
+# -static-libstdc++ \
+# -I./libs/glfw/include \
+# -I./libs/glad/include \
+# -I./libs/glm \
+# -I./libs/stb \
+# -L./libs/glfw/lib-mingw-w64 \
+# -lglfw3 -lopengl32 -lgdi32\
 
 # 
 if [ -f "main.exe" ]; then
